# zut

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: autopurge.rs  cli.rs  config.rs  lib.rs  main.rs  metadata.rs  personality.rs  stats.rs  trash.rs
tests/: integration_cli.rs  integration_trash.rs
