[package]
name = "zut"
version = "0.1.0"
edition = "2024"
description = "Un rm qui fait pas de bêtises. Déplace vers la corbeille au lieu de supprimer."
license = "MIT"
repository = "https://github.com/tobiasdotrip/zut"
keywords = ["shell", "cli", "trash", "rm", "french"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
colored = "3"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
humansize = "2"
tabled = "0.20"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
